# budgetapp

./: .gitignore  CLAUDE.md  README.md  budgetapp.spec  pyproject.toml  run.sh
.github/workflows/: build-mac.yml  build-windows.yml
Jade Banking.app/Contents/: Info.plist
Jade Banking.app/Contents/MacOS/: Jade Banking
Jade Banking.app/Contents/Resources/: icon.icns
budgetapp/: __main__.py  main.py
budgetapp/api/: bridge.py
budgetapp/config/: settings.py
budgetapp/core/: budget.py  categorizer.py  debt_planner.py  models.py  paste_parser.py
budgetapp/parsers/: apple.py  apple_card.py  base.py  chase.py  chase_checking.py  chase_sapphire.py  marcus.py  marcus_hysa.py  wells_fargo.py  wells_fargo_cc.py  wells_fargo_checking.py
budgetapp/storage/: database.py  repository.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  declarations.d.ts  types.ts
frontend/src/components/: AccountManager.tsx  Advisor.tsx  BudgetGuide.tsx  Calculator.tsx  CategoryManager.tsx  Dashboard.tsx  DebtManager.tsx  HelpTooltip.tsx  ImportBar.tsx  PaymentCalendar.tsx  ProgressTab.tsx  SettingsManager.tsx  Sidebar.tsx  SplitsManager.tsx  TransactionTable.tsx
tests/: conftest.py  test_categorizer.py  test_chase_checking.py  test_debt_planner.py  test_storage.py  test_wells_fargo_cc.py
