[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "budgetapp"
version = "0.1.0"
description = "Household budget tracker — Dave + Cam"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40",
    "pdfplumber>=0.11",
    "pandas>=2.2",
    "pywebview>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "black>=24.0",
    "ruff>=0.4",
]

[project.scripts]
budgetapp = "budgetapp.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["budgetapp*"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
